--- a/practices/src/main/resources/application.properties
+++ b/practices/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=demo
 server.port=8080
 management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:h2:mem:test_db
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=false
