Connect to mySQL and add Spring Security Basic Authentication

--- a/practices/src/main/resources/application.properties
+++ b/practices/src/main/resources/application.properties
@@ -1,6 +1,20 @@
 spring.application.name=demo
 server.port=8080
+
+#expose all links on actuator
 management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:h2:mem:test_db
+
+#database config
+#spring.datasource.url=jdbc:h2:mem:test_db
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#database seed
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+
+spring.security.user.name=user
+spring.security.user.password=password
