--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.application.name=currency-exchange-service
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
+
+#database config
+spring.datasource.url=jdbc:mysql://localhost:3306/currency_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+
+#database seed
+#spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
