Add exception handling

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=currency-exchange-service
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
+#server.error.whitelabel.enabled=false
 
 #database config
 spring.datasource.url=jdbc:h2:mem:test_db
