--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
 #server.error.whitelabel.enabled=false
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
 #database config
 spring.datasource.url=jdbc:h2:mem:test_db
 #spring.h2.console.enabled=true
