--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=currency-exchange
+spring.application.name=CURRENCY-EXCHANGE
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
 #server.error.whitelabel.enabled=false
 
+eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 #database config
