--- a/limits-service/src/main/resources/application.properties
+++ b/limits-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #application name should match with limits-service.properties file name
-spring.application.name=limits-service
+spring.application.name=limits-server
 
 spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
