--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,13 +5,13 @@ error.whitelabel.enabled= false
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-
-spring.cloud.gateway.routes[0].id=CURRENCY-EXCHANGE
-spring.cloud.gateway.routes[0].uri=lb://CURRENCY-EXCHANGE
-spring.cloud.gateway.routes[0].predicates[0]=Path=/service1/**
-
-spring.cloud.gateway.routes[1].id=CURRENCY-CONVERSION
-spring.cloud.gateway.routes[1].uri=lb://CURRENCY-CONVERSION
-spring.cloud.gateway.routes[1].predicates[0]=Path=/service2/**
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#
+#spring.cloud.gateway.routes[0].id=CURRENCY-EXCHANGE
+#spring.cloud.gateway.routes[0].uri=lb://CURRENCY-EXCHANGE
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/service1/**
+#
+#spring.cloud.gateway.routes[1].id=CURRENCY-CONVERSION
+#spring.cloud.gateway.routes[1].uri=lb://CURRENCY-CONVERSION
+#spring.cloud.gateway.routes[1].predicates[0]=Path=/service2/**
