Add Retry, Circuit Breaker, Rate Limiter, Bulkhead

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -17,3 +17,18 @@ spring.datasource.url=jdbc:h2:mem:test_db
 #database seed
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+
+#retry
+resilience4j.retry.instances.sample-api.maxAttempts=5
+resilience4j.retry.instances.sample-api.waitDuration=1s
+resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
+
+#circuit breaker
+resilience4j.circuitbreaker.instances.default.failureRateThreshold=90
+
+#rate limiter
+resilience4j.ratelimiter.instances.default.limitForPeriod=2
+resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
+
+#bulkhead
+resilience4j.bulkhead.instances.default.maxConcurrentCalls=10
